[package]
name = "bt_string_utils"
version = "0.1.0"
edition = "2021"
authors = ["calvarez <calvarez@bachuetech.biz>"]
description = "Basic string operations"
keywords = ["strings","split"]
categories = ["value-formatting", "development-tools"]
repository = "https://github.com/bachuetech/"
readme = "README.md"
homepage = "https://github.com/bachuetech/"
license = "GPL-3.0-only"


[dependencies]
