[package]
name = "bt_string_utils"
version = "0.2.6"
edition = "2024"
authors = ["calvarez <calvarez@bachuetech.biz>"]
description = "Basic string operations"
keywords = ["strings","split","remove"]
categories = ["value-formatting", "development-tools"]
repository = "https://github.com/bachuetech/bt_string_utils"
readme = "README.md"
homepage = "https://github.com/bachuetech/bt_string_utils"
license = "GPL-3.0-only"


[dependencies]
rand = "0.9.2"
regex = "1.12.2"
